--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
 </head>
 
 <body data-spy="scroll" data-target=".navigation">
-
+	<script type="text/javascript">
+var ZCallbackWidgetLinkId  = 'baf59270768668715d0572f0f3b70a03';
+var ZCallbackWidgetDomain  = 'my.zadarma.com';
+(function(){
+    var lt = document.createElement('script');
+    lt.type ='text/javascript';
+    lt.charset = 'utf-8';
+    lt.async = true;
+    lt.src = 'https://' + ZCallbackWidgetDomain + '/callbackWidget/js/main.min.js?unq='+Math.floor(Math.random(0,1000)*1000);
+    var sc = document.getElementsByTagName('script')[0];
+    if (sc) sc.parentNode.insertBefore(lt, sc);
+    else document.documentElement.firstChild.appendChild(lt);
+})();
+</script>
 	<!-- Banner -->
 	<div id="banner" class="bg-blur">
 		<!-- Start Header -->
@@ -43,8 +56,8 @@
 					<!-- Start Navigation -->
 					<div class="navigation navbar-collapse collapse">
 						<ul class="nav navbar-nav menu-right">
-							<li class="active"><a href="#banner">Home</a></li>
-							<li><a href="#intro">Intro</a></li>
+							<li class="active"><a href="#banner">Головна</a></li>
+							<li><a href="#intro">Переваги</a></li>
 							<li><a href="#portfolio">Portfolio</a></li>
 							<li><a href="#features">Features</a></li>
 							<li><a href="#pricing">Price</a></li>
@@ -62,35 +75,18 @@
 					<!-- Start Header Text -->
 					<div class="col-md-7 col-sm-7">
 						<h1><strong>Вичавимо</strong> сік з ваших фруктів та овочів</h1>
-						<p>Швидко та якісно вичавимо сік з вашої сировини фруктів, овочів, ягід. Доступна пастеризація в пакети BAG-IN-BOX. Також можливо купити готовий сік чи яблука</p>
-						<p>Ціни на вичавлення соку</p>
+						<p class="banner-content__hintinfo">Швидко та якісно вичавимо сік з вашої сировини фруктів, овочів, ягід. Доступна пастеризація в пакети BAG-IN-BOX. Також можливо купити готовий сік чи яблука</p>
+						<h3 class="banner-content__prices">Ціни на вичавлення соку</h3>
 						<ul class="banner-list">
-							<li><i class="fa fa-check"></i>Без миття фруктів - 2 грн/літр</li>
-							<li><i class="fa fa-check"></i>З миттям фруктів - 2,5 грн/літр</li>
-							<li><i class="fa fa-check"></i>З пастеризацією та миттям - 55 грн 5-ти літровий пакет</li>
-							<li><i class="fa fa-check"></i>Коробка для пастеризованого соку - 10 грн</li>
+							<li class="banner-content__price"><i class="fa fa-check"></i>Без миття фруктів - 2 грн/літр</li>
+							<li class="banner-content__price"><i class="fa fa-check"></i>З миттям фруктів - 2,5 грн/літр</li>
+							<li class="banner-content__price"><i class="fa fa-check"></i>З пастеризацією та миттям - 55 грн 5-ти літровий пакет</li>
+							<li class="banner-content__price"><i class="fa fa-check"></i>Коробка для пастеризованого соку - 10 грн</li>
 						</ul>
 					</div>
 					<!-- End Header Text -->
 					<!-- Start Banner Optin Form-->
 					<div class="col-lg-4 col-md-4 col-md-offset-1 col-sm-5">
-						<div class="banner-form">
-							<div class="form-title">
-								<h2>Start your FREE trial</h2>
-							</div>
-							<div class="form-body">
-								<p>To stay tuned to our updates, enter Your Name and Email Address!</p>
-								<form id="banner-form" class="form" method="post" action="http://websites.simplesphere.net/cleany/form.php">
-									<div class="form-group">
-										<input name="banner-name" id="banner-name" type="text" class="form-control" required placeholder="Your Name">
-									</div>
-									<div class="form-group">
-										<input name="banner-email" id="banner-email" type="text" class="form-control" required placeholder="Your E-mail">
-									</div>
-									<button type="submit" class="btn btn-default btn-submit">Subscribe</button>
-								</form>
-							</div>
-						</div>
 					</div>
 					<!-- End Banner Optin Form -->
 				</div>
@@ -103,12 +99,11 @@
 	<div id="clients" class="padding40 bg-grey hidden-xs">
 		<div class="container">
 			<ul class="list-inline clients-logo text-center">
-				<li><img src="img/logo1.png" alt="" title="" /></li>
-				<!--Image path of logo -->
-				<li><img src="img/logo2.png" alt="" title="" /></li>
-				<li><img src="img/logo3.png" alt="" title="" /></li>
-				<li><img src="img/logo1.png" alt="" title="" /></li>
-				<li><img src="img/logo2.png" alt="" title="" /></li>
+				<li><h4>Пастеризація соку</h4></li>
+				<li><h4>200 літрів за 30хв</h4></li>
+				<li><h4>Вичавлення винограду</h4></li>
+				<li><h4>Миття яблук</h4></li>
+				<li><h4>Безкоштовна оренда емностей</h4></li>
 			</ul>
 		</div>
 	</div>
@@ -118,35 +113,29 @@
 	<section id="intro" class="section">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12 headline">
-					<h2>A simple <span class="blue">minimalistic</span> landing page!</h2>
-					<p>Lorem ipsum dolor elit sed sit amet, consectetur adipisicing elit, sed do tempor incididunt ut labore et dolore magna aliqua.</p>
-				</div>
-			</div>
-			<div class="row">
 				<div class="col-lg-5 col-md-5">
 					<img src="img/inclined.png" class="img-responsive" alt="" title="">
 				</div>
 				<div class="col-lg-6 col-md-6 col-md-offset-1">
 					<div class="features">
 						<!-- Main Points -->
-						<i class="line-font blue icon-shield"></i>
+							<i class="line-font blue advantages_icon icon-shield"></i>
 						<!-- Main Point Icon -->
-						<h3>Client Oriented</h3>
+						<h3>Жива черга</h3>
 						<!-- Main Title -->
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+						<p>Немає потреби в попередньому записі, адже з використанням потужного гідравлічного обладнання процес вичавлення соку проходить швидко і черга ніколи не затримується.</p>
 						<!-- Main Text -->
 					</div>
 					<!-- End Main Points -->
 					<div class="features">
-						<i class="line-font blue icon-bubbles"></i>
-						<h3>Easy way to capture leads</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+						<i class="line-font blue advantages_icon icon-bar-chart"></i>
+						<h3>Пастеризація соку</h3>
+						<p> Доступна легка пастеризація соку в пакети Bag–in–Boxю. Cік зберігає більше корисних властивостей та довже простоїть після відприття пакету ніж у банці.</p>
 					</div>
 					<div class="features">
-						<i class="line-font blue icon-bar-chart"></i>
-						<h3>Easy Adaptable</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+						<i class="line-font blue advantages_icon icon-bubbles"></i>
+						<h3>Кращі ціни</h3>
+						<p>В нас найдешевші ціни у Львові. Крім того потужне гідравлічне обладнання вичавить з ваших фруктів більше соку!</p>
 					</div>
 				</div>
 			</div>
@@ -154,34 +143,57 @@
 			<!-- Separator -->
 			<div class="row">
 				<div class="col-md-6">
-					<h2>Easy flow of content</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, <strong>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</strong>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut. Ut ad minim veniam.</p>
-					<p>Vestibulum ante ipsum primis in faucibus orci luctus etel ultrices posuere cubilia Curae.</p>
+					<h2>Купимо ваші яблука</h2>
+					<p>Купимо яблука за вигідною ціною, можливі великі об'єми. Всі деталі за вказанити телефонами.</p>
 				</div>
 				<div class="col-md-5 col-md-offset-1">
-					<img src="img/imac2.png" class="img-responsive" alt="" title="">
+					<img src="img/apple_x.png" class="img-responsive" alt="" title="">
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="propositions__tree-juce-text">
+						<h2>Приймаємо замовлення на березовий сік</h2>
+						<p>Купимо яблука за вигідною ціною, можливі великі об'єми. Всі деталі за вказанити телефонами.</p>
+					</div>
+				</div>
+				<div class="col-md-5 col-md-offset-1">
+					<img src="img/tree_juse.jpg" class="img-responsive propositions__tree-juce-img" alt="" title="">
 				</div>
 			</div>
 			<hr class="separator60">
 			<div class="row">
 				<div class="col-md-6">
-					<img src="img/devices.png" class="img-responsive" alt="" title="">
+					<div class="margintop">
+						<p class="text-center contacts_title">Контакти</p>
+						<ul class="text-center contact-list">
+							<!--Green arrow list -->
+							<li><p class="contacts_item">м. Львів</p></li>
+							<li><p class="contacts_item">вул. Чижевського 84</p></li>
+							<li><p class="contacts_item">+38 097 449 23 00 </p></li>
+							<li><p class="contacts_item">+38 097 449 23 00 </p></li>
+						</ul>
+					</div>
 				</div>
 				<div class="col-md-6">
-					<div class="margintop">
-						<h2>List of Numerous Advantages</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, <strong>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</strong>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.</p>
-						<ul class="green-arrow">
-							<!--Green arrow list -->
-							<li>Many addon features</li>
-							<li>Fully responsive &amp; adaptive</li>
-							<li>SEO optimized</li>
-							<li>Attractive with a modern touch</li>
-							<li>Full Support</li>
-						</ul>
-						<p>Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Cras ultricies ligula sed magna dictum porta.</p>
-					</div>
+
+					<div id="map"></div>
+					<script>
+					function initMap() {
+						 var myPositions = {lat: 49.8506865, lng: 23.9728979};
+						 var map = new google.maps.Map(document.getElementById('map'), {
+							 zoom: 15,
+							 center: myPositions
+						 });
+						 var marker = new google.maps.Marker({
+							 position: myPositions,
+							 map: map
+						 });
+					 }
+						initMap();
+					</script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBra2hXrLX1P3FCMp63TAmTzzsNOrIUbr0&callback=initMap"
+	async defer></script>
 				</div>
 			</div>
 		</div>
@@ -231,8 +243,27 @@
 				</div>
 				<div class="col-md-7">
 					<div class="video-container">
-						<iframe src="http://player.vimeo.com/video/75188030"></iframe>
-						<!-- Responsive video iframe -->
+						<div id="map"></div>
+				    <script>
+						function initMap() {
+							 var myPositions = {lat: 49.8506865, lng: 23.9728979};
+							 var map = new google.maps.Map(document.getElementById('map'), {
+								 zoom: 15,
+								 center: myPositions,
+								 icon: {
+									 url:
+								 }
+							 });
+							 var marker = new google.maps.Marker({
+								 position: myPositions,
+								 map: map
+							 });
+						 }
+							initMap();
+				    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBra2hXrLX1P3FCMp63TAmTzzsNOrIUbr0&callback=initMap"
+    async defer></script>
+
 					</div>
 				</div>
 			</div>
@@ -440,7 +471,6 @@
 			</div>
 			<div class="row text-center">
 				<div class="col-md-12">
-					<img src="img/apple.png" class="img-responsive" alt="" title="" />
 				</div>
 			</div>
 		</div>
